[FIX] cb_maintenance_project: Fix view

--- a/cb_maintenance_project/views/maintenance_request.xml
+++ b/cb_maintenance_project/views/maintenance_request.xml
@@ -82,6 +82,7 @@
             </button>
             <field name="priority" position="after">
                 <field name="currency_id" invisible="1" />
+                <field name="purchases_count" invisible="1" />
                 <field
                     name="cost"
                     widget="monetary"
