--- a/maintenance_mgmtsystem_indicators_report/views/maintenance_request.xml
+++ b/maintenance_mgmtsystem_indicators_report/views/maintenance_request.xml
@@ -8,10 +8,7 @@
         >maintenance.request.form (in maintenance_mgmtsystem_indicators_report)</field>
         <field name="model">maintenance.request</field>
         <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form" />
-        <field
-            name="groups_id"
-            eval="[(4, ref('mgmtsystem.group_mgmtsystem_manager'))]"
-        />
+        <field name="groups_id" eval="[(4, ref('mgmtsystem.group_mgmtsystem_user'))]" />
         <field name="arch" type="xml">
             <xpath expr="//span[hasclass('badge')]/.." position="before">
                 <div name="button_box " class="oe_button_box">
