[16.0][MIG] cb_maintenance_project: migration to 16.0

--- a/cb_maintenance_project/static/src/scss/maintenance.scss
+++ b/cb_maintenance_project/static/src/scss/maintenance.scss
@@ -1,4 +1,4 @@
-.o_cb_maintenance.o_list_view .o_list_table {
+.o_cb_maintenance.o_list_renderer .o_list_table {
     .text-danger {
         color: $table-color !important;
         background-color: #ffefef;
