--- a/cb_maintenance_project/wizards/wizard_create_project_issue.xml
+++ b/cb_maintenance_project/wizards/wizard_create_project_issue.xml
@@ -21,6 +21,7 @@
                             options="{'child_selection_field': 'name'}"
                         />
                         <field name="priority" widget="priority" />
+                        <field name="company_id" />
                     </group>
                 </group>
                 <group>
